Resolves: tdf#100046 the dreaded 1945-04-02 Double DST, also tdf#79663

This is a combination of 5 commits.

two more testDateInput() dates

Found in comments of i18npool/source/calendar/calendar_gregorian.cxx
Calendar_gregorian::setValue()

(cherry picked from commit 17fb4d43e86bd9622fb1b2c4378ab1e63a0025f0)

display data on test failure

(cherry picked from commit 4097b95d62db14f738f69e3bb4d1162739f3a06a)

add test data from tdf#79663, tdf#100046 related

... before changing anything.

(cherry picked from commit 22dceea0ca3cd68463e390395aa8de479b680240)

Resolves: tdf#100046 the dreaded 1945-04-02 Double DST, also tdf#79663

A coward not having changed this earlier, partially taken from a patch that was
submitted for tdf#79663 but broke API, thanks to Isamu Mogi again.

This removes all the clutter around timezone and DST correction that was
necessary for early ICU versions, which apparently gets things right now and
the clutter can still be confused by corner cases.

(cherry picked from commit 8e91b0177cbf6554acf7ccfbcc573f647e7fcf4d)

 Conflicts:
	i18npool/inc/calendar_gregorian.hxx
	i18npool/source/calendar/calendar_gregorian.cxx

activate the remaining 1945-04-02 test cases, tdf#100046

(cherry picked from commit 157b56a049a9a5f868d1f3b9856a631a40043a14)

432ba81929dd0badd48d2bd7b4344ceed4df2b43
edf89713de1eb02e501723f679bf059b5a43415e
9a90f933e8db8c6e0db145520ebf71cc27621abc
4d2f3d5602b162924c14348c0307a74ddeb93079

Change-Id: I4ab0aae15b7d97b22bc3a16d039542b5b49d3f14